// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstanceInfo Renders QuotaInstance story 1`] = `
<body>
  <div>
    <div
      class="pf-m-flex-1 mas--CreateKafkaInstanceWithSizes__sidebar"
      style=""
    >
      <div
        class="pf-l-stack pf-m-gutter"
        data-testid="instance-info"
      >
        <div
          class="pf-l-stack__item"
        >
          <article
            class="pf-c-card pf-m-flat"
            data-ouia-component-id="OUIA-Generated-Card-1"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <h2
              class="pf-c-card__title"
            >
              Details
            </h2>
            <div
              class="pf-c-card__body"
            >
              <dl
                class="pf-c-description-list pf-m-compact"
              >
                <div
                  class="pf-c-description-list__group"
                >
                  <div
                    class="pf-l-grid pf-m-all-6-col-on-sm pf-m-all-12-col-on-lg pf-m-gutter"
                  >
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Size
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          1 streaming units
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Ingress
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 MiB/second
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Egress
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 MiB/second
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Storage
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 GiB
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Partitions
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Client connections
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Connection rate
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 connections/second
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Message size
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 MiB
                        </div>
                      </dd>
                    </div>
                  </div>
                </div>
              </dl>
            </div>
          </article>
        </div>
        <div
          class="pf-l-stack__item"
        >
          <article
            class="pf-c-card pf-m-compact pf-m-flat"
            data-ouia-component-id="OUIA-Generated-Card-2"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <h2
              class="pf-c-card__title"
            >
              Need help getting started?
            </h2>
            <div
              class="pf-c-card__body"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline pf-m-small"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Follow our quick start guide.
              </button>
            </div>
          </article>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`InstanceInfo Renders TrialInstance story 1`] = `
<body>
  <div>
    <div
      class="pf-m-flex-1 mas--CreateKafkaInstanceWithSizes__sidebar"
      style=""
    >
      <div
        class="pf-l-stack pf-m-gutter"
        data-testid="instance-info"
      >
        <div
          class="pf-l-stack__item"
        >
          <article
            class="pf-c-card pf-m-flat"
            data-ouia-component-id="OUIA-Generated-Card-3"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <h2
              class="pf-c-card__title"
            >
              Details
            </h2>
            <div
              class="pf-c-card__body"
            >
              <dl
                class="pf-c-description-list pf-m-compact"
              >
                <div
                  class="pf-c-description-list__group"
                >
                  <div
                    class="pf-l-grid pf-m-all-6-col-on-sm pf-m-all-12-col-on-lg pf-m-gutter"
                  >
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Duration
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          <svg
                            aria-hidden="true"
                            fill="var(--pf-global--info-color--100)"
                            height="1em"
                            role="img"
                            style="vertical-align: -0.125em;"
                            viewBox="0 0 512 512"
                            width="1em"
                          >
                            <path
                              d="M256,8C119,8,8,119,8,256S119,504,256,504,504,393,504,256,393,8,256,8Zm92.49,313h0l-20,25a16,16,0,0,1-22.49,2.5h0l-67-49.72a40,40,0,0,1-15-31.23V112a16,16,0,0,1,16-16h32a16,16,0,0,1,16,16V256l58,42.5A16,16,0,0,1,348.49,321Z"
                            />
                          </svg>
                           
                          123 hours
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Ingress
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 MiB/second
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Egress
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 MiB/second
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Storage
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 GiB
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Partitions
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Client connections
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Connection rate
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 connections/second
                        </div>
                      </dd>
                    </div>
                    <div
                      class="pf-l-grid__item"
                    >
                      <dt
                        class="pf-c-description-list__term"
                      >
                        <span
                          class="pf-c-description-list__text"
                        >
                          Message size
                        </span>
                      </dt>
                      <dd
                        class="pf-c-description-list__description"
                      >
                        <div
                          class="pf-c-description-list__text"
                        >
                          up to 123 MiB
                        </div>
                      </dd>
                    </div>
                  </div>
                </div>
              </dl>
            </div>
          </article>
        </div>
        <div
          class="pf-l-stack__item"
        >
          <article
            class="pf-c-card pf-m-compact pf-m-flat"
            data-ouia-component-id="OUIA-Generated-Card-4"
            data-ouia-component-type="PF4/Card"
            data-ouia-safe="true"
            id=""
          >
            <h2
              class="pf-c-card__title"
            >
              Need help getting started?
            </h2>
            <div
              class="pf-c-card__body"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline pf-m-small"
                data-ouia-component-id="OUIA-Generated-Button-link-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                type="button"
              >
                Follow our quick start guide.
              </button>
            </div>
          </article>
        </div>
      </div>
    </div>
  </div>
</body>
`;
